[package]
name = "http-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0"
hyper-util = { version = "0", features = ["full"] }
bytes = { version = "1", features = ["std", "serde"] }
serde = { version = "1", features = ["std", "serde_derive"] }
serde_json = { version = "1" }
